# bevy-shoot-em-up

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  wall_scoreboard.rs
