[package]
name = "bevy-shoot-em-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
rand = { "version" = "0.8.5", features = ["small_rng"] }
# bevy-inspector-egui = "0.18.3"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
mobile = []

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
